# Python_securenetops_dockerlab

./: .env  README.md  docker-compose.yml  pyproject.toml
configs/: desired_state.yml  monitor.yml  security_policy.yml  targets.yml
data/: metrics.jsonl
k8s/: securenetops-lab.yaml
scripts/: k8s_deploy.sh  k8s_smoke_test.sh  lab_down.sh  lab_up.sh  wsl_preflight.sh
services/client/: Dockerfile
services/controller_api/: Dockerfile
services/controller_api/app/: main.py
services/monitor/: Dockerfile
services/target_web/: Dockerfile
services/target_web/app/: main.py
src/core/: config.py  http.py  logger.py  report.py  retry.py
tests/: test_config_load_yaml.py  test_http_error.py  test_masking_logger.py
tools/: intent_apply.py  monitor_agent.py  netdiag.py  security_audit.py
